<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--    espacio para Actionbar y solapas    -->

    <include
        android:id="@+id/layout_ads_top"
        layout="@layout/ads_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_ads_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textAlignment="center"
            android:textSize="@dimen/big_text" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/margen_lateral"
            android:background="@color/black"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/linear_botonHitorias"
                android:layout_width="@dimen/size_item_muy_grande"
                android:layout_height="@dimen/size_item_muy_grande"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/margen_chico"
                android:background="@drawable/selectable_background_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_imagen_de_historia"
                    android:minWidth="@dimen/size_item_grande"
                    android:minHeight="@dimen/size_item_grande" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_chico"
                    android:text="@string/historias"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_botonPersonajes"
                android:layout_width="@dimen/size_item_muy_grande"
                android:layout_height="@dimen/size_item_muy_grande"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margen_chico"
                android:background="@drawable/selectable_background_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_imagen_de_personaje"
                    android:minWidth="@dimen/size_item_grande"
                    android:minHeight="@dimen/size_item_grande" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_chico"
                    android:text="@string/personajes"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_botonEventos"
                android:layout_width="@dimen/size_item_muy_grande"
                android:layout_height="@dimen/size_item_muy_grande"
                android:layout_below="@id/linear_botonHitorias"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/margen_chico"
                android:background="@drawable/selectable_background_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_imagen_de_evento"
                    android:minWidth="@dimen/size_item_grande"
                    android:minHeight="@dimen/size_item_grande" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_chico"
                    android:text="@string/eventos"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_botonArte"
                android:layout_width="@dimen/size_item_muy_grande"
                android:layout_height="@dimen/size_item_muy_grande"
                android:layout_below="@id/linear_botonPersonajes"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margen_chico"
                android:background="@drawable/selectable_background_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/description_imagen_de_arte"
                    android:minWidth="@dimen/size_item_grande"
                    android:minHeight="@dimen/size_item_grande" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_chico"
                    android:text="@string/arte"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />
            </LinearLayout>
        </RelativeLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout_appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:elevation="@dimen/elevation_card">

            <!--<com.google.android.material.bottomappbar.BottomAppBar-->
            <!--android:id="@+id/bottomAppBar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:visibility="invisible" />-->

            <!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
            <!--android:id="@+id/floatingButton_new"-->
            <!--android:layout_width="@dimen/size_fab_normal"-->
            <!--android:layout_height="@dimen/size_fab_normal"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--app:layout_anchor="@id/bottomAppBar" />-->
        </android.support.design.widget.CoordinatorLayout>
    </RelativeLayout>
    <!--    espacio para popUp    -->
    <FrameLayout
        android:id="@+id/frameLayout_popUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>